syntax = "proto3";

package api.aftersales.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/aftersales/v1;v1";

// 售后服务，管理退货、退款、换货流程以及客户支持工单。
service Aftersales {
  // --- 退换货管理 ---

  // 创建一个售后单（退货、退款或换货）。
  rpc CreateReturnRequest(CreateReturnRequestRequest) returns (ReturnRequestResponse);

  // 获取售后单详情。
  rpc GetReturnRequest(GetReturnRequestRequest) returns (ReturnRequestResponse);

  // 管理员更新售后单进度及状态。
  rpc UpdateReturnRequestStatus(UpdateReturnRequestStatusRequest) returns (ReturnRequestResponse);

  // 列表查询售后申请。
  rpc ListReturnRequests(ListReturnRequestsRequest) returns (ListReturnRequestsResponse);

  // 执行最终的资金原路退回操作。
  rpc ProcessRefund(ProcessRefundRequest) returns (RefundResponse);

  // 触发生成换货的新订单。
  rpc ProcessExchange(ProcessExchangeRequest) returns (ExchangeResponse);

  // --- 客户支持工单管理 ---

  // 开启一个新的客服工单。
  rpc CreateSupportTicket(CreateSupportTicketRequest) returns (SupportTicketResponse);

  // 查询工单处理详情及对话记录。
  rpc GetSupportTicket(GetSupportTicketRequest) returns (SupportTicketResponse);

  // 修改工单状态或分配处理人。
  rpc UpdateSupportTicketStatus(UpdateSupportTicketStatusRequest) returns (SupportTicketResponse);

  // 在工单内发送新的回复消息。
  rpc AddSupportTicketMessage(AddSupportTicketMessageRequest) returns (SupportTicketMessageResponse);

  // 分页列出工单。
  rpc ListSupportTickets(ListSupportTicketsRequest) returns (ListSupportTicketsResponse);

  // 获取工单内的完整聊天记录。
  rpc ListSupportTicketMessages(ListSupportTicketMessagesRequest) returns (ListSupportTicketMessagesResponse);

  // --- 配置管理 ---

  // 查询售后相关全局参数。
  rpc GetAftersalesConfig(GetAftersalesConfigRequest) returns (AftersalesConfigResponse);

  // 更新售后服务政策或参数配置。
  rpc SetAftersalesConfig(SetAftersalesConfigRequest) returns (AftersalesConfigResponse);
}

// 售后申请类型。
enum ReturnRequestType {
  RETURN_REQUEST_TYPE_UNSPECIFIED = 0;
  RETURN_REQUEST_TYPE_RETURN = 1; // 退货并退款
  RETURN_REQUEST_TYPE_REFUND = 2; // 仅退款
  RETURN_REQUEST_TYPE_EXCHANGE = 3; // 换货
}

// 售后单状态。
enum ReturnRequestStatus {
  RETURN_REQUEST_STATUS_UNSPECIFIED = 0;
  RETURN_REQUEST_STATUS_PENDING = 1; // 待审核
  RETURN_REQUEST_STATUS_APPROVED = 2; // 已批准，等待寄回
  RETURN_REQUEST_STATUS_REJECTED = 3; // 已驳回
  RETURN_REQUEST_STATUS_SHIPPED_BACK = 4; // 用户已寄回
  RETURN_REQUEST_STATUS_RECEIVED = 5; // 仓库已确认收货
  RETURN_REQUEST_STATUS_REFUNDED = 6; // 已完成退款
  RETURN_REQUEST_STATUS_EXCHANGED = 7; // 已发出换货商品
  RETURN_REQUEST_STATUS_CLOSED = 8; // 流程关闭
}

// 售后申请单。
message ReturnRequest {
  // 唯一 ID。
  uint64 id = 1;
  // 申请用户 ID。
  uint64 user_id = 2;
  // 关联原订单 ID。
  uint64 order_id = 3;
  // 关联原订单项 ID。
  uint64 order_item_id = 4;
  // 类型。
  ReturnRequestType request_type = 5;
  // 当前状态。
  ReturnRequestStatus status = 6;
  // 申请原因。
  string reason = 7;
  // 详细问题描述。
  string description = 8;
  // 用户上传的图片证据。
  repeated string image_urls = 9;
  // 实际核准的退款金额。
  double refund_amount = 10;
  // 用户退货寄回的快递单号。
  string tracking_number = 11;
  // 建议退货地址。
  string return_address = 12;
  // 提交时间。
  google.protobuf.Timestamp created_at = 13;
  // 最后更新时间。
  google.protobuf.Timestamp updated_at = 14;
}

// 创建售后申请。
message CreateReturnRequestRequest {
  // 用户 ID。
  uint64 user_id = 1;
  // 订单 ID。
  uint64 order_id = 2;
  // 订单项 ID。
  uint64 order_item_id = 3;
  // 申请类型。
  ReturnRequestType request_type = 4;
  // 原因。
  string reason = 5;
  // 详情描述。
  optional string description = 6;
  // 图片列表。
  repeated string image_urls = 7;
}

// 售后详情请求。
message GetReturnRequestRequest {
  // 售后单 ID。
  uint64 id = 1;
}

// 售后状态更新请求。
message UpdateReturnRequestStatusRequest {
  // 售后单 ID。
  uint64 id = 1;
  // 新状态。
  ReturnRequestStatus status = 2;
  // 管理员审核意见。
  optional string admin_note = 3;
  // 最终确定的退款金额。
  optional double refund_amount = 4;
  // 后台补充的退货快递单号（如代预约）。
  optional string tracking_number = 5;
}

// 售后列表请求。
message ListReturnRequestsRequest {
  // 分页大小。
  int32 page_size = 1;
  // 分页令牌。
  int32 page_token = 2;
  // 按用户筛选。
  optional uint64 user_id = 3;
  // 按订单筛选。
  optional uint64 order_id = 4;
  // 按类型。
  optional ReturnRequestType request_type = 5;
  // 按状态。
  optional ReturnRequestStatus status = 6;
  // 开始日期。
  optional google.protobuf.Timestamp start_date = 7;
  // 结束日期。
  optional google.protobuf.Timestamp end_date = 8;
}

// 售后列表响应。
message ListReturnRequestsResponse {
  // 申请单列表。
  repeated ReturnRequest requests = 1;
  // 总笔数。
  int32 total_count = 2;
  // 下一页令牌。
  int32 next_page_token = 3;
}

// 售后单响应实体。
message ReturnRequestResponse {
  // 申请单。
  ReturnRequest request = 1;
}

// 退款执行结果。
message RefundResponse {
  // 退款记录 ID。
  uint64 refund_id = 1;
  // 关联售后单 ID。
  uint64 return_request_id = 2;
  // 退款金额。
  double amount = 3;
  // 货币。
  string currency = 4;
  // 状态。
  string status = 5;
  // 完成时间。
  google.protobuf.Timestamp created_at = 6;
}

// 支付退款请求。
message ProcessRefundRequest {
  // 售后单 ID。
  uint64 return_request_id = 1;
  // 金额。
  double amount = 2;
  // 币种。
  string currency = 3;
  // 银行端流水号。
  optional string payment_transaction_id = 4;
}

// 换货结果。
message ExchangeResponse {
  // 换货记录 ID。
  uint64 exchange_id = 1;
  // 关联售后单 ID。
  uint64 return_request_id = 2;
  // 新产生的补发订单 ID。
  uint64 new_order_id = 3;
  // 状态。
  string status = 4;
  // 创建时间。
  google.protobuf.Timestamp created_at = 5;
}

// 换货处理请求。
message ProcessExchangeRequest {
  // 售后单 ID。
  uint64 return_request_id = 1;
  // 补发的新商品 ID。
  uint64 new_product_id = 2;
  // 补发数量。
  int32 new_quantity = 3;
  // 补发配送地址快照。
  optional string shipping_address = 4;
}

// 工单状态枚举。
enum SupportTicketStatus {
  SUPPORT_TICKET_STATUS_UNSPECIFIED = 0;
  SUPPORT_TICKET_STATUS_OPEN = 1; // 开启
  SUPPORT_TICKET_STATUS_IN_PROGRESS = 2; // 处理中
  SUPPORT_TICKET_STATUS_RESOLVED = 3; // 已解决
  SUPPORT_TICKET_STATUS_CLOSED = 4; // 已关闭
}

// 工单优先级。
enum SupportTicketPriority {
  SUPPORT_TICKET_PRIORITY_UNSPECIFIED = 0;
  SUPPORT_TICKET_PRIORITY_LOW = 1;
  SUPPORT_TICKET_PRIORITY_MEDIUM = 2;
  SUPPORT_TICKET_PRIORITY_HIGH = 3;
  SUPPORT_TICKET_PRIORITY_URGENT = 4;
}

// 客服工单。
message SupportTicket {
  // 唯一 ID。
  uint64 id = 1;
  // 用户 ID。
  uint64 user_id = 2;
  // 关联业务订单。
  optional uint64 order_id = 3;
  // 工单标题。
  string subject = 4;
  // 当前处理状态。
  SupportTicketStatus status = 5;
  // 紧急程度。
  SupportTicketPriority priority = 6;
  // 当前分配的座席 ID。
  optional uint64 assigned_to_admin_user_id = 7;
  // 提交时间。
  google.protobuf.Timestamp created_at = 8;
  // 最后活跃时间。
  google.protobuf.Timestamp updated_at = 9;
  // 结案时间。
  google.protobuf.Timestamp resolved_at = 10;
}

// 工单创建请求。
message CreateSupportTicketRequest {
  // 用户 ID。
  uint64 user_id = 1;
  // 订单 ID。
  optional uint64 order_id = 2;
  // 标题。
  string subject = 3;
  // 问题首句描述。
  string initial_message = 4;
  // 附件链接列表。
  repeated string attachment_urls = 5;
  // 初始优先级。
  optional SupportTicketPriority priority = 6;
}

// 工单查询。
message GetSupportTicketRequest {
  // 工单 ID。
  uint64 id = 1;
}

// 工单状态更新请求。
message UpdateSupportTicketStatusRequest {
  // 工单 ID。
  uint64 id = 1;
  // 目标状态。
  SupportTicketStatus status = 2;
  // 指派给管理员。
  optional uint64 assigned_to_admin_user_id = 3;
  // 修改优先级。
  optional SupportTicketPriority priority = 4;
}

// 发送消息请求。
message AddSupportTicketMessageRequest {
  // 工单 ID。
  uint64 ticket_id = 1;
  // 发送方 ID。
  uint64 sender_id = 2;
  // 是否由座席（管理员）发出。
  bool is_admin_sender = 3;
  // 消息正文。
  string content = 4;
  // 附件。
  repeated string attachment_urls = 5;
}

// 工单对话消息。
message SupportTicketMessage {
  // 消息唯一 ID。
  uint64 id = 1;
  // 关联工单 ID。
  uint64 ticket_id = 2;
  // 发送者 ID。
  uint64 sender_id = 3;
  // 是否座席。
  bool is_admin_sender = 4;
  // 正文。
  string content = 5;
  // 附件列表。
  repeated string attachment_urls = 6;
  // 发送时间。
  google.protobuf.Timestamp created_at = 7;
}

// 工单列表查询请求。
message ListSupportTicketsRequest {
  // 分页大小。
  int32 page_size = 1;
  // 令牌。
  int32 page_token = 2;
  // 用户 ID 筛选。
  optional uint64 user_id = 3;
  // 状态筛选。
  optional SupportTicketStatus status = 4;
  // 优先级筛选。
  optional SupportTicketPriority priority = 5;
  // 指派座席筛选。
  optional uint64 assigned_to_admin_user_id = 6;
  // 标题关键字搜索。
  optional string subject_keyword = 7;
  // 时间范围。
  optional google.protobuf.Timestamp start_date = 8;
  optional google.protobuf.Timestamp end_date = 9;
}

// 工单列表响应。
message ListSupportTicketsResponse {
  // 工单列表。
  repeated SupportTicket tickets = 1;
  // 总数。
  int32 total_count = 2;
  // 翻页令牌。
  int32 next_page_token = 3;
}

// 消息记录查询请求。
message ListSupportTicketMessagesRequest {
  // 工单 ID。
  uint64 ticket_id = 1;
  // 每页数量。
  int32 page_size = 2;
  // 令牌。
  int32 page_token = 3;
}

// 消息记录列表。
message ListSupportTicketMessagesResponse {
  // 消息序列。
  repeated SupportTicketMessage messages = 1;
  // 笔数。
  int32 total_count = 2;
  // 令牌。
  int32 next_page_token = 3;
}

// 工单响应。
message SupportTicketResponse {
  // 工单数据。
  SupportTicket ticket = 1;
}

// 消息响应。
message SupportTicketMessageResponse {
  // 消息数据。
  SupportTicketMessage message = 1;
}

// 配置项定义。
message AftersalesConfig {
  // 键。
  string key = 1;
  // 值。
  string value = 2;
  // 配置说明。
  string description = 3;
  // 修改时间。
  google.protobuf.Timestamp updated_at = 4;
}

// 配置查询。
message GetAftersalesConfigRequest {
  // 键。
  string key = 1;
}

// 配置响应。
message AftersalesConfigResponse {
  // 配置。
  AftersalesConfig config = 1;
}

// 设置配置请求。
message SetAftersalesConfigRequest {
  // 键。
  string key = 1;
  // 值。
  string value = 2;
  // 说明。
  string description = 3;
}
